# snocomm-sentinel

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  defensive_check.yml  documentation.yml
.github/workflows/: ci.yml
assets/brand/: README.md
docs/: CORPORATE_BRIEF.md  FINGERPRINTING_NOTES.md  HARDENING_GUIDE.md  MVT_JSON_INTEGRATION.md  MVT_WORKFLOW.md  NEBRIX_PEGASUS_DISTINCTION.md  PRIVACY_MODEL.md  SGGS_GEOMETRY_ETHOS.md  THREAT_MODEL.md
examples/: config.example.yml  indicators.example.yml  mvt-results.example.json  report.example.md
src/snocomm_sentinel/: __init__.py  cli.py  config.py  report.py  risk.py
src/snocomm_sentinel/checks/: __init__.py  fingerprint.py  ios_backup.py  lockdown.py  macos.py  mvt_bridge.py  nebrix_indicators.py
templates/corporate/: EXECUTIVE_REPORT_TEMPLATE.md  IT_ASSESSMENT_TEMPLATE.md  LEGAL_CONSENT_TEMPLATE.md  README.md  RISK_MATRIX_TEMPLATE.md  THIRTY_DAY_PLAN_TEMPLATE.md
tests/: test_config.py  test_report.py  test_risk.py
